# project-share-or-fare

./: .gitignore  README.md  data-exploration.ipynb  main.py  make_csvs.ipynb  molly_500.csv  pyproject.toml  requirements.txt  sabrina_500.csv  sarah_500.csv  toy_data.csv  waleed_500.csv
api/: __main__.py  cached_get.py  parse_response.py
dash/: app.py  js.py
dash/text/: corridor_highest_price  (+5 more)
dashboard/: app.py  appendix.py  discussion.py  intro_tab.py  js.py  map.py  tab1_transit_rideshare.py  tab2_neighborhood_analysis.py  utils.py
data/: Neighborhoods_2012b_20260227.csv  molly_10k.csv  molly_10k_api_response.csv  molly_500_api_response.csv  molly_58k.csv  sabrina_10k.csv  sabrina_10k_api_response.csv  sabrina_500.csv  sabrina_500_api_response.csv  sabrina_500_merged.csv  sarah_10k.csv  sarah_10k_api_response.csv  sarah_500_api_response.csv  toy_data.csv  toy_data_grouped.csv  waleed_10k.csv  waleed_10k_api_response.csv  waleed_500.csv  waleed_500_api_response.csv  waleed_58k.csv
data_processing/: __main__.py  clean_route_data.py  join.py  make_csv.py
milestones/: milestone1.md  milestone2.md
rideshare/: __main__.py  join.py  make_csv.py  make_csvs.ipynb
scratch/: charts.py  data-exploration.ipynb  make_csvs.ipynb  sabrina_58k.csv  sabrina_many_merged_test.csv  sarah_58k.csv  test.ipynb  unused_charts.py
tests/: test_api.py  test_dashboard_visualization_transform.py  test_join.py  test_make_csv.py  test_visualization_transform_data.py
visualization/: app.py  clean_route_data.py  map.html  map_app.py  mapping.ipynb  visualization_proposal.txt
(+26 files in other folders)
