[project]
name = "project-share-or-fare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.0.0",
    "dash-ag-grid>=33.3.3",
    "dash-bootstrap-components>=2.0.4",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "ruff>=0.15.1",
]
